webkit text wrap fix(maybe) and cache bust

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -351,6 +351,7 @@ h1 {
     font-size: 1.7em;
     font-weight: 700;
     margin: 10px 0px;
+    word-break: break-word;
 }
 
 h2 {
@@ -359,6 +360,7 @@ h2 {
     font-size: 1.4em;
     font-weight: 400;
     margin: 10px 0px;
+    word-break: break-word;
 }
 
 h3 {
@@ -367,6 +369,7 @@ h3 {
     font-size: 1em;
     font-weight: 300;
     margin: 20px 0px;
+    word-break: break-word;
 }
 
 h4 {
@@ -375,6 +378,7 @@ h4 {
     font-size: 0.8em;
     font-weight: 300;
     margin: 10px 0px;
+    word-break: break-word;
 }
 
 .main a {
